# most_common_string

./: .gitmodules  CMakeLists.txt  README.md  build.sh  hash3.cpp  hash3.cu  hash3_omp.cpp  hash3_seq.cpp  init.py  main.py  naive.cpp  naive.cu  rabin_karp.cpp  rabin_karp.cu  rabin_karp_seq.cpp  rabin_karp_seq_vect.cpp  rabin_karp_vect.cpp
ans/: s12.txt  s13.txt  s16.txt  s17.txt  s19.txt  s20.txt  s22.txt  s24.txt  s26.txt  s28.txt  s30.txt  s33.txt  s36.txt  s39.txt  s42.txt  s46.txt  s50.txt  s55.txt  s60.txt  s66.txt
cmake/: common_configuration.cmake
genome_samples/: all_data.txt  s10.txt  s1017019.txt  s103.txt  s103258.txt  s10488.txt  s1069.txt  s11.txt  s1118720.txt  s113.txt  s113583.txt  s11536.txt  s1175.txt  s12.txt  s1230592.txt  s124.txt  s124941.txt  s12689.txt  s1292.txt  s13.txt  s1353651.txt  s136.txt  s137435.txt  s13957.txt  s14.txt  s1421.txt  s1489016.txt  s149.txt  s15.txt  s151178.txt  s15352.txt  s1563.txt  s16.txt  s163.txt  s1637917.txt  s166295.txt  s16887.txt  s17.txt  s1719.txt  s179.txt  (+95 more)
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/include/: algorithms.h  common_defs.h
lib/src/: base_naive.cpp  hash3.cpp  naive.cpp  rabin_karp.cpp  rabin_karp_SWAR.cpp  rabin_karp_rolling_hash.cpp
perf/: CMakeLists.txt
perf/include/: perf_common.hpp
perf/src/: hash3.cpp  naive.cpp  rabin_karp.cpp  rabin_karp_SWAR.cpp  rabin_karp_rolling_hash.cpp
scripts/: check.py
src/: CMakeLists.txt  hash3.cpp  naive.cpp  rabin_karp.cpp
test/: CMakeLists.txt
test/include/: test_common.hpp
test/src/: algo_test.cpp  main.cpp
